--- a/slides/xaringan-themer.css
+++ b/slides/xaringan-themer.css
@@ -17,22 +17,22 @@
  *
  * ------------------------------------------------------- */
 @import url(https://fonts.googleapis.com/css?family=PT+Sans);
-@import url(https://fonts.googleapis.com/css?family=Crimson+Text);
+@import url(https://fonts.googleapis.com/css?family=Vollkorn);
 @import url(https://fonts.googleapis.com/css?family=Inconsolata);
 @import url(xaringan-themer.css);
 
 body {
   font-family: PT Sans, 'Palatino Linotype', 'Book Antiqua', Palatino, 'Microsoft YaHei', 'Songti SC', serif;
   font-weight: ;
-  color: #272822;
+  color: #001E25;
 }
 h1, h2, h3 {
-  font-family: Crimson Text;
+  font-family: Vollkorn;
   font-weight: normal;
   color: #002b36;
 }
 .remark-slide-content {
-  background-color: #FFFFFF;
+  background-color: #E5E9EA;
   font-size: 20px;
   
   
@@ -82,14 +82,14 @@ a, a > code {
 }
 .inverse {
   background-color: #002b36;
-  color: #FFFFFF;
+  color: #E5E9EA;
   
 }
 .inverse h1, .inverse h2, .inverse h3 {
-  color: #FFFFFF;
+  color: #E5E9EA;
 }
 .title-slide, .title-slide h1, .title-slide h2, .title-slide h3 {
-  color: #FFFFFF;
+  color: #E5E9EA;
 }
 .title-slide {
   background-color: #002b36;
@@ -144,11 +144,11 @@ table thead th { border-bottom: 1px solid #ddd; }
 th, td { padding: 5px; }
 thead, tfoot, tr:nth-child(even) { background: white }
 table.dataTable tbody {
-  background-color: #FFFFFF;
-  color: #272822;
+  background-color: #E5E9EA;
+  color: #001E25;
 }
 table.dataTable.display tbody tr.odd {
-  background-color: #FFFFFF;
+  background-color: #E5E9EA;
 }
 table.dataTable.display tbody tr.even {
   background-color: white;
@@ -157,10 +157,10 @@ table.dataTable.hover tbody tr:hover, table.dataTable.display tbody tr:hover {
   background-color: rgba(255, 255, 255, 0.5);
 }
 .dataTables_wrapper .dataTables_length, .dataTables_wrapper .dataTables_filter, .dataTables_wrapper .dataTables_info, .dataTables_wrapper .dataTables_processing, .dataTables_wrapper .dataTables_paginate {
-  color: #272822;
+  color: #001E25;
 }
 .dataTables_wrapper .dataTables_paginate .paginate_button {
-  color: #272822 !important;
+  color: #001E25 !important;
 }
 
 @page { margin: 0; }
